DigIt CHANGE LOG
======================


2025/08/14 Added Copy as is in ExportFiles as Images;
           Added Rulers MenuItems;
           Changed UI XML KeyNames and Added Rulers Load/Save;
           Changed Enabled of ImageManipulation to EnabledWorkArea;
           Added Clear of XML before Save Session;

        13 Added Rulers Change with PopupMenù;
           Added Some To-Do;

2025/07/30 Deleted use of TResolutionUnit in CropAreas (use my bgracontrols branch);
           Changed ConvertPaperToResolutionUnit to ConvertCmPaperTo;
           Deleted TEMPORARY Unit Convert Functions;
           Changed MainForm edCropUnit_Type Items to Physical Units;
           Re Added BGRAControls define;

        29 Added Session can use of External Bitmap (let's save memory);
           Linux Capital Unit names fixes and Project Update;

        28 Changed TCustomTakeMethod to a non object function;
           Session LoadImage Free old Bitmap due an Assign mulfunction;
           Use of theBridge.MessageDlg in Sources;
           Added Cursor Method in Bridge Impl;

        24 MainForm CropAreas are Copied From/To Session;
           MainForm CropAreas Load/Save additional Fields in XML;
           Session use of PhysicalSizeToPixels to Crop Areas;
           Added ResolutionToCSSUnit (yet another temp function);

        23 fixed some incorrect calculations in Page percentages;
           Changed BuildPaperSizesMenu to use TPhysicalUnit;
           Use of PaperSizes global var in BuildPaperSizesMenu;
           Added temp ConvertPaperToResolutionUnit function;
           Added AddPapers to Add US and Business Cards Papers;
           Deleted Flip/Rotate Image to Initial Value in MainForm;
           Session LoadImage first Resize Image;
           Added Page Resize/Flip/Rotate Properties in Session;

        22 Added defaultResolution, BitmapWidth/Height to PhysicalSize;
           Added GetPixelsSize and SetBitmapValues to PhysicalSize